--- a/styles.css
+++ b/styles.css
@@ -495,6 +495,7 @@ footer {
   position: relative;
   background-color: #f8f8f8;
   padding: 5rem;
+  padding-bottom: 1rem;
   border-top: 1px solid #e0e0e0;
 }
 
@@ -577,6 +578,7 @@ footer {
   text-align: left;
   margin-top: 30px;
   padding: 3rem;
+  padding-bottom: 1rem;
   border-top: 1px solid #e0e0e0;
   max-width: 1300px;
   margin: 0 auto;
